--- a/React/linked-list/src/App.css
+++ b/React/linked-list/src/App.css
@@ -1,15 +1,35 @@
+
+.community{
+  color: white;
+  background: url("world3.jpg");
+}
+.math{
+  color: white;
+  background: url("math.jpg");
+
+}
+.people{
+  color: black;
+  background:url("community.jpg")
+
+}
+
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
+.App-logo,
+.logos {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
 }
 
+
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  min-height: 0vh;
   display: flex;
   flex-direction: column;
   align-items: center;
