--- a/zeroToHero/reactrobo/robots/src/index.css
+++ b/zeroToHero/reactrobo/robots/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background:linear-gradient(to left, rgb(216, 57, 168) 0%, rgb(95, 190, 57) 100%);
 }
 
